Adiciona homepage em package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "generic-react",
+  "homepage": "https://qu4k3r.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
