--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.2.0",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.3.0",
@@ -46,7 +47,6 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "react-gtm-module": "^2.0.11"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
