--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga4": "^1.1.1",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.2.0",
     "react-particles-js": "^3.4.1",
